feat: Add React frontend chat interface
- Implement complete React/TypeScript frontend with Vite
- Create chat interface with dual agent selection (normal/strict)
- Follow comprehensive UI/UX guidelines with Tailwind CSS
- Add message bubbles, input, and agent selector components
- Implement useChat hook for state management
- Set up API integration with backend services
- Ensure full responsiveness and accessibility (WCAG AA)
- Add development start script for running both frontend and backend
- Update documentation with frontend setup instructions

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,19 @@
-# Configuration pour l'Agent Mentor AI
+# Configuration for Dev Mentor AI
 
-# Clé API Blackbox (obligatoire)
-# Obtenez votre clé sur : https://blackbox.ai/api
+# Blackbox API Key (required)
+# Get your key from: https://blackbox.ai/api  
 BLACKBOX_API_KEY=your_blackbox_api_key_here
+
+# Database Configuration
+# Railway automatically provides DATABASE_URL for PostgreSQL
+# For local development, you can use SQLite:
+# DATABASE_URL=sqlite:///./dev_mentor.db
+
+# Railway PostgreSQL (automatically set in production)
+DATABASE_URL=postgresql://username:password@hostname:port/database
+
+# Optional: Chroma memory store directory
+CHROMA_PERSIST_DIRECTORY=./chroma_memory
+
+# Optional: Environment identifier
+ENVIRONMENT=development
