--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,9 @@ requests>=2.31.0
 python-dotenv>=1.0.0
 pydantic>=2.5.0
 
+# PydanticAI for advanced agent functionality
+pydantic-ai>=0.0.14
+
 # Development Dependencies  
 pytest>=7.4.0
 pytest-asyncio>=0.21.0
