--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,8 @@ sqlalchemy>=2.0.0
 psycopg2-binary>=2.9.0
 alembic>=1.12.0
 
-# Vector Store (Chroma for conversation memory)
+# Vector Store (Chroma for conversation memory) - lightweight version
 chromadb>=0.4.15
-sentence-transformers>=2.2.0
 
 # Existing Blackbox API integration
 requests>=2.31.0
