Update Railway backend URL to correct production endpoint

--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,5 +1,4 @@
 # Production environment variables for Vercel deployment
-# Replace with your actual Railway backend URL
-VITE_API_BASE_URL=https://hackathonblackbox-production.up.railway.app
+VITE_API_BASE_URL=https://web-production-aae05.up.railway.app
 VITE_API_TIMEOUT=30000
 VITE_DEFAULT_USER_ID=user123
